Not displaying correct alignment of "Bar code number" on "Print Document" page in both mode (Lanscape & portraite) on desktop & IPAD.

--- a/assets/css/rtl.css
+++ b/assets/css/rtl.css
@@ -34,9 +34,13 @@ table td,table th
 .footer-agree {
   direction: rtl;
 }
+
 .esig-template-page .sig-tooltip.active {
     right: unset !important;
     left: 10px;
     text-align: right !important;
 }
 
+#audit-trail-wrapper .main .checksum .code {
+    margin-left: 20px;
+}
